loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:18: error: 'while' expected but '}' found.
}
^